force-app/main/default/objects/SRN_Lines__c/SRN_Lines__c.object-meta.xml
<CustomObject>
    <label>SRN Lines</label>
    <nameField>
        <label>SRN Lines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SRN Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>