force-app/main/default/objects/SRN_Lines__c/fields/Accepted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Quantity__c</fullName>
    <label>Accepted Quantity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>