force-app/main/default/objects/SRN_Lines__c/fields/Challan_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Challan_Quantity__c</fullName>
    <label>Challan Quantity</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>