force-app/main/default/objects/SRN_Lines__c/fields/Direct_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Direct_Unit_Cost__c</fullName>
    <label>Direct Unit Cost</label>
    <length>40</length>
    <type>Text</type>
</CustomField>