force-app/main/default/objects/SRN_Lines__c/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <label>Line Amount</label>
    <length>40</length>
    <type>Text</type>
</CustomField>