force-app/main/default/objects/SRN_Lines__c/fields/Pending_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Order_Quantity__c</fullName>
    <label>Pending Order Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>