force-app/main/default/objects/SRN_Lines__c/fields/Received_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Received_Quantity__c</fullName>
    <label>Received Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>