force-app/main/default/objects/SRN_Lines__c/fields/SRN_Header__c.field-meta.xml
<CustomField>
    <fullName>SRN_Header__c</fullName>
    <label>SRN Header</label>
    <referenceTo>SRN_Header__c</referenceTo>
    <relationshipLabel>SRN Lines</relationshipLabel>
    <relationshipName>SRN_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>