force-app/main/default/objects/SRN_Lines__c/fields/Unit_of_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_Code__c</fullName>
    <label>Unit of Measure Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>